--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
+  
+   
     .card-link{
       color: whitesmoke;
       background-color: black;
@@ -59,6 +61,10 @@
 div.desc {
   padding: 15px;
   text-align: center;
+}
+
+img{
+  max-width: 100%;;
 }
 
   </style>
@@ -110,7 +116,7 @@ div.desc {
 
     <div class="row">
     <div class="col-sm-5">
-     <img src="mm.jfif"  style="border:2px solid whitesmoke;border-radius: 70px;margin-left: 120px;" alt="Table Setting" width="400px" height="500px">
+     <img src="mm.jfif"  style="border:2px solid whitesmoke;border-radius: 70px;" alt="Table Setting" width="400px" height="500px">
     </div>
 
     <div class="col-sm-7" style="color: whitesmoke;">
@@ -137,14 +143,14 @@ div.desc {
       </div>
   
       <div class="col-sm-5" >
-        <img src="go.jfif"  style="border:2px solid whitesmoke;border-radius: 70px;margin-left: 90px;" alt="Table Setting" width="400px" height="500px">
+        <img src="go.jfif"  style="border:2px solid whitesmoke;border-radius: 70px;" alt="Table Setting" width="400px" height="500px">
       </div>
     </div>
     <br><br><br><br>
 
     <div class="row">
       <div class="col-sm-5">
-       <img src="mn.jfif"  style="border:2px solid whitesmoke;border-radius: 70px;margin-left: 120px;" alt="Table Setting" width="400px" height="500px">
+       <img src="mn.jfif"  style="border:2px solid whitesmoke;border-radius: 70px;" alt="Table Setting" width="400px" height="500px">
       </div>
   
       <div class="col-sm-7" style="color: whitesmoke;">
@@ -340,7 +346,7 @@ div.desc {
   <h3 style="text-align: center;color: red;">Subscribe To Us</h3>
   <div class="search-container">
     <form action="#" >
-      <input type="text" placeholder=" Email..." name="search" value="" style="border: 1px solid red;border-radius: 10px;width: 250px;padding:5px 0px 5px 5px ;margin-left: 410px;margin-top: 40px;margin-bottom: 30px;">
+      <input type="text" placeholder=" Email..." name="search" value="" style="border: 1px solid red;border-radius: 10px;width: 250px;padding:5px 0px 5px 5px ;margin-left:240px;margin-top: 40px;margin-bottom: 30px;">
       <button type="submit" style="border: 1px solid red;border-radius: 5px;padding: auto;"><i class="fa fa-sign-in"></i></button>
      
     </form>
